<!--

    Copyright (C) 2010 Sopra Steria Group (movalys.support@soprasteria.com)

    This file is part of Movalys MDK.
    Movalys MDK is free software: you can redistribute it and/or modify
    it under the terms of the GNU Lesser General Public License as published by
    the Free Software Foundation, either version 3 of the License, or
    (at your option) any later version.
    Movalys MDK is distributed in the hope that it will be useful,
    but WITHOUT ANY WARRANTY; without even the implied warranty of
    MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the
    GNU Lesser General Public License for more details.
    You should have received a copy of the GNU Lesser General Public License
    along with Movalys MDK. If not, see <http://www.gnu.org/licenses/>.

-->
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:mdk="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MapsActivity">

    <LinearLayout
        android:id="@+id/root"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <Button
            android:id="@+id/enableButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="switchEnable"
            android:text="@string/topbar_disablebutton" />

        <!-- EDITABLE RICH ENUMVIEW WITH LABEL AND ERROR -->

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/enumimage_editable_with_label_error" />

        <com.soprasteria.movalysmdk.widget.basic.MDKRichEnumView
            android:id="@+id/mdkRichEnumImage_withLabelAndError"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            mdk:enum_mobileos_android_validator="true"
            mdk:label="@string/app_name"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="4dp"
            android:background="@drawable/separator_background" />

        <!-- NON EDITABLE INNER ENUMVIEW WITH EXTERNAL ERROR/COMMAND -->

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/enumimage_standalone_widget" />

        <com.soprasteria.movalysmdk.widget.basic.MDKEnumView
            android:id="@+id/mdkEnumImage_withErrorAndCommandOutside"
            android:layout_width="match_parent"
            mdk:enumMode="image"
            mdk:readOnly="true"
            android:layout_height="wrap_content"/>

        <com.soprasteria.movalysmdk.widget.core.message.MDKMessagesTextView
            android:id="@+id/enumimage_errorText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <View
            android:layout_width="match_parent"
            android:layout_height="4dp"
            android:background="@drawable/separator_background" />

        <!-- INNER ENUMIMAGE WITH IMAGE SET BY STRING -->

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/enumimage_standalone_widget" />

        <com.soprasteria.movalysmdk.widget.basic.MDKEnumView
            android:id="@+id/mdkEnumImage_withImageSetByString"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            mdk:readOnly="false"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="4dp"
            android:background="@drawable/separator_background" />


        <!-- EDITABLE RICH ENUMVIEW TEXT (NO ENUM) WITH LABEL AND ERROR -->

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/enumtext_with_label_error" />

        <com.soprasteria.movalysmdk.widget.basic.MDKRichEnumView
            android:id="@+id/mdkRichEnumText_withLabelAndError"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            mdk:enumMode="text"
            mdk:readOnly="false"
            mdk:label="@string/app_name"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="4dp"
            android:background="@drawable/separator_background" />


        <!-- EDITABLE RICH ENUMVIEW WITH FIXED DIMENSIONS-->

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/enumtext_with_fixed_dimensions" />

        <com.soprasteria.movalysmdk.widget.basic.MDKRichEnumView
            android:id="@+id/mdkRichEnumImage_withFixedDiensions"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            mdk:thumbnailWidth="144dp"
            mdk:thumbnailHeight="144dp"
            mdk:readOnly="false"
            mdk:label="@string/app_name"/>

        <!-- READONLY RICH ENUMVIEW WITH NO CONTENT -->

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/enumtext_readonly_no_content" />

        <com.soprasteria.movalysmdk.widget.basic.MDKRichEnumView
            android:id="@+id/mdkRichEnumImage_withNoContent"
            android:layout_width="144dp"
            android:layout_height="144dp"
            mdk:enumMode="image"
            mdk:readOnly="true"
            mdk:label="@string/app_name"/>

    </LinearLayout>

</ScrollView>