...
    along with Movalys MDK. If not, see <http://www.gnu.org/licenses/>.

-->
<resources>
    <string name="app_name">MDK Android widget</string>

    <string name="hello_world">Hello world!</string>
    <string name="empty_string">""</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_list_widget">List Widget</string>
    <string name="email_activity">Email</string>
    <string name="phone_activity">Phone</string>
    <string name="position_activity">Position</string>
...

    <string name="fortyTwoTextFormater_prefix" translatable="false">"42 /!\\ "</string>

    <string name="no_number_validator" translatable="false">com.soprasteria.movalysmdk.widget.sample.validator.NoNumberValidator</string>
    <string name="mobileos_android_validator" translatable="false">com.soprasteria.movalysmdk.widget.sample.validator.MobileOSAndroidValidator</string>
    <string name="no_number_allowed">No number allowed</string>
    <string name="wrong_os">Wrong Operating System. Please select Android.</string>
    <string name="rich_seelctor_commons">Rich selector for multiple widget by style</string>
    <string name="rich_selector_solo">Rich selector for single widget</string>

    <string name="uri_rich_with_label_error">Uri rich widget with label and error</string>
    <string name="uri_with_label">Uri widget with label</string>
    <string name="checkable_value_true">Widget must be checked</string>
...
    <string name="enum_MobileOS_SYMBIAN">Symbian</string>


    <!-- TESTED RESOURCES -->
    <string name="test_app_name">MDK Android widget</string>
    <string name="test_empty_string" translatable="false">""</string>
    <string name="test_fortyTwoTextFormater_prefix" translatable="false">"42 /!\\ "</string>
    <string name="test_date_error_ranged" translatable="false">" (2015/01/01 00:00:00 &lt; 2015/05/12 11:52:33)\\n"</string>
    <string name="test_mdkvalidator_email_error_invalid">Invalid email value</string>
    <string name="test_uri_helper_text">uri format text</string>
    <string name="test_testHintText">Test hint</string>
    <string name="test_mdkvalidator_mandatory_error_invalid">Must be filled</string>
    <string name="test_mdkvalidator_datetimerange_error_range">Date out of limits</string>
...
